--- a/.github/workflows/commcare-android-pr-workflow.yml
+++ b/.github/workflows/commcare-android-pr-workflow.yml
@@ -48,8 +48,8 @@ jobs:
           path: |
             ~/.gradle/caches
             ~/.gradle/wrapper
-            commcare-android
-            commcare-core
+            /commcare-android
+            /commcare-core
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
   build-test-assemble:
     needs: setup-runner
