--- a/.github/workflows/commcare-android-pr-workflow.yml
+++ b/.github/workflows/commcare-android-pr-workflow.yml
@@ -137,7 +137,7 @@ jobs:
     needs: fetch-repos
     runs-on: ubuntu-latest
     steps:
-      - name: Cache repos
+      - name: Restore repos cache
         uses: actions/cache/restore@v3
         with:
           path: |
@@ -154,7 +154,7 @@ jobs:
       - name: CommCare apk for Instrumentation Testing
         uses: gradle/gradle-build-action@v2
         with:
-          arguments: assembleCommcareReleaseAndroidTest
+          arguments: assembleCommcareDebugAndroidTest
       - name: Upload CommCare apk for Instrumentation Testing
         uses: actions/upload-artifact@v3
         with:
