--- a/.github/workflows/commcare-android-pr-workflow.yml
+++ b/.github/workflows/commcare-android-pr-workflow.yml
@@ -3,8 +3,8 @@ name: commcare-android PR CI
 env:
   PR_NUM: ${{github.event.issue.number || github.event.number }}
   BASE_LOCATION: app/build/outputs/
-  RELEASE_APP_LOCATION: app/build/outputs/apk/commcare/debug/app-commcare-debug.apk
-  TEST_APP_LOCATION: app/build/outputs/apk/androidTest/commcare/debug/app-commcare-debug-androidTest.apk
+  RELEASE_APP_LOCATION: app/build/outputs/apk/commcare/release/app-commcare-release.apk
+  TEST_APP_LOCATION: app/build/outputs/apk/androidTest/commcare/release/app-commcare-release-androidTest.apk
   BROWSERSTACK_USERNAME: ${{ secrets.BROWSERSTACK_USERNAME }}
   BROWSERSTACK_PASSWORD: ${{ secrets.BROWSERSTACK_PASSWORD }}
   BROWSERSTACK_DEVICES: ${{ vars.BROWSERSTACK_DEVICES }}
@@ -147,30 +147,28 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '17'
-      - name: Assemble Debug apk
-        uses: gradle/gradle-build-action@v2
+      - name: Dowanload CommCare Release apk 
+        uses: actions/download-artifact@v3
         with:
-          arguments: assembleCommcareDebug
-      - name: Upload CommCare debug apk 
-        uses: actions/upload-artifact@v3
-        with:
-          name: commcare-debug-apk
-          path: app/build/outputs/apk/commcare/debug/app-commcare-debug.apk
+          name: commcare-release-apk
+          path: app/build/outputs/apk/commcare/release/app-commcare-release.apk
       - name: CommCare apk for Instrumentation Testing
         uses: gradle/gradle-build-action@v2
         with:
-          arguments: assembleCommcareDebugAndroidTest
+          arguments: assembleCommcareReleaseAndroidTest
       - name: Upload CommCare apk for Instrumentation Testing
         uses: actions/upload-artifact@v3
         with:
           name: commcare-release-androidTest-apk
-          path: app/build/outputs/apk/androidTest/commcare/debug/app-commcare-debug-androidTest.apk
+          path: app/build/outputs/apk/androidTest/commcare/release/app-commcare-release-androidTest.apk
       - name: Install python
         uses: actions/setup-python@v4
         with:
           python-version: '3.9'
       - name: Run Instrumentation Tests
         run: |
+          cd ~/.gradle
+          cat gradle.properties
           python3 -c 'import os;print(os.environ)'
           python3 -c "import os;print(os.environ['BROWSERSTACK_DEVICES'])"
           python3 scripts/browserstack.py
