--- a/.github/workflows/commcare-android-pr-workflow.yml
+++ b/.github/workflows/commcare-android-pr-workflow.yml
@@ -64,11 +64,10 @@ jobs:
           cache-name: cache-repos
         with:
           path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
+            ~/.gradle
             /home/runner/work/commcare-android/commcare-android
             /home/runner/work/commcare-android/commcare-core
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties', '/home/runner/work/commcare-android/commcare-android', '/home/runner/work/commcare-android/commcare-core') }}
+          key: ${{ runner.os }}-gradle-${{ hashFiles('~/.gradle', '/home/runner/work/commcare-android/commcare-android', '/home/runner/work/commcare-android/commcare-core') }}
   build-test-assemble:
     needs: prep-repos
     runs-on: ubuntu-latest
@@ -77,8 +76,7 @@ jobs:
         uses: actions/cache/restore@v3
         with:
           path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
+            ~/.gradle
             /home/runner/work/commcare-android/commcare-android
             /home/runner/work/commcare-android/commcare-core
           key: ${{ runner.os }}-gradle-
@@ -130,8 +128,7 @@ jobs:
         uses: actions/cache/restore@v3
         with:
           path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
+            ~/.gradle
             /home/runner/work/commcare-android/commcare-android
             /home/runner/work/commcare-android/commcare-core
           key: ${{ runner.os }}-gradle-
