--- a/app/build.gradle
+++ b/app/build.gradle
@@ -125,7 +125,8 @@ dependencies {
     implementation "androidx.work:work-runtime-ktx:2.7.0"
 
     implementation 'com.google.android.play:core:1.7.3'
-    implementation 'android.arch.lifecycle:common-java8:1.1.1'
+    implementation 'androidx.lifecycle:lifecycle-common-java8:$lifecycle_version'
+    implementation 'androidx.lifecycle:lifecycle-process:$lifecycle_version'
 
     //Robust TLS 1.2 ciphers on Android 9-19
     implementation "org.conscrypt:conscrypt-android:2.4.0"
