--- a/.github/workflows/commcare-android-pr-workflow.yml
+++ b/.github/workflows/commcare-android-pr-workflow.yml
@@ -40,6 +40,33 @@ jobs:
         run: |
           cd ..
           python3 checkout_cross_request_repo.py commcare-android ${{env.PR_NUM}} commcare-core . ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: Cache repos
+        uses: actions/cache/save@v3
+        env:
+          cache-name: cache-repos
+        with:
+          path: |
+            /home/runner/work/commcare-android/commcare-android
+            /home/runner/work/commcare-android/commcare-core
+          key: ${{ runner.os }}-gradle-${{ hashFiles('/home/runner/work/commcare-android/commcare-android', '/home/runner/work/commcare-android/commcare-core') }}
+  check-test-build:
+    name: Check, Test and Build LTS and Bundle
+    needs: prep-repos
+    runs-on: ubuntu-latest
+    steps:
+      - name: Restore repos from cache
+        uses: actions/cache/restore@v3
+        with:
+          path: |
+            /home/runner/work/commcare-android/commcare-android
+            /home/runner/work/commcare-android/commcare-core
+          key: ${{ runner.os }}-gradle-
+      - name: Setup JDK
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
       - name: Restore Gradle properties file
         run: |
           mkdir -p ~/.gradle/
@@ -58,34 +85,6 @@ jobs:
           echo "MAPBOX_SDK_API_KEY=${{ secrets.MAPBOX_SDK_API_KEY }}" >> ~/.gradle/gradle.properties
           echo "${{ vars.JVM_ARGS }}" >> ~/.gradle/gradle.properties
           echo "${{ vars.GRADLE_DAEMON }}" >> ~/.gradle/gradle.properties
-      - name: Cache repos
-        uses: actions/cache/save@v3
-        env:
-          cache-name: cache-repos
-        with:
-          path: |
-            ~/.gradle
-            /home/runner/work/commcare-android/commcare-android
-            /home/runner/work/commcare-android/commcare-core
-          key: ${{ runner.os }}-gradle-${{ hashFiles('~/.gradle', '/home/runner/work/commcare-android/commcare-android', '/home/runner/work/commcare-android/commcare-core') }}
-  check-test-build:
-    name: Check, Test and Build LTS and Bundle
-    needs: prep-repos
-    runs-on: ubuntu-latest
-    steps:
-      - name: Restore repos from cache
-        uses: actions/cache/restore@v3
-        with:
-          path: |
-            ~/.gradle
-            /home/runner/work/commcare-android/commcare-android
-            /home/runner/work/commcare-android/commcare-core
-          key: ${{ runner.os }}-gradle-
-      - name: Setup JDK
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
       - name: Clean with Gradle
         uses: gradle/gradle-build-action@v2
         with:
@@ -132,7 +131,6 @@ jobs:
         uses: actions/cache/restore@v3
         with:
           path: |
-            ~/.gradle
             /home/runner/work/commcare-android/commcare-android
             /home/runner/work/commcare-android/commcare-core
           key: ${{ runner.os }}-gradle-
@@ -141,6 +139,24 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '17'
+      - name: Restore Gradle properties file
+        run: |
+          mkdir -p ~/.gradle/
+          cd ~/.gradle
+          CURR_DIR=$(pwd)
+          echo ${{secrets.SIGNING_KEY}} | base64 -d > commcare-odk-keys.keystore
+          echo "RELEASE_KEY_ALIAS= ${{ secrets.ALIAS }}" >> ~/.gradle/gradle.properties
+          echo "RELEASE_KEY_PASSWORD= ${{ secrets.KEY_PASSWORD }}" >> ~/.gradle/gradle.properties
+          echo "RELEASE_STORE_PASSWORD= ${{ secrets.KEY_STORE_PASSWORD }}" >> ~/.gradle/gradle.properties
+          echo "RELEASE_STORE_FILE= $CURR_DIR/commcare-odk-keys.keystore" >> ~/.gradle/gradle.properties
+          echo "GOOGLE_PLAY_MAPS_API_KEY= ${{ secrets.GOOGLE_PLAY_MAPS_API_KEY }}" >> ~/.gradle/gradle.properties
+          echo "GOOGLE_SERVICES_API_KEY= ${{ secrets.GOOGLE_SERVICES_API_KEY }}" >> ~/.gradle/gradle.properties
+          echo "HQ_API_PASSWORD= ${{ secrets.HQ_API_PASSWORD }}" >> ~/.gradle/gradle.properties
+          echo "HQ_API_USERNAME= ${{ secrets.HQ_API_USERNAME }}" >> ~/.gradle/gradle.properties
+          echo "TEST_BUILD_TYPE=${{ secrets.TEST_BUILD_TYPE }}" >> ~/.gradle/gradle.properties
+          echo "MAPBOX_SDK_API_KEY=${{ secrets.MAPBOX_SDK_API_KEY }}" >> ~/.gradle/gradle.properties
+          echo "${{ vars.JVM_ARGS }}" >> ~/.gradle/gradle.properties
+          echo "${{ vars.GRADLE_DAEMON }}" >> ~/.gradle/gradle.properties
       - name: Assemble Release apk
         uses: gradle/gradle-build-action@v2
         with:
