--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -143,9 +143,11 @@
         <activity android:name="org.commcare.activities.StandardHomeActivity"/>
         <activity android:name="org.commcare.activities.RootMenuHomeActivity"/>
         <activity android:name="org.commcare.activities.MenuActivity"/>
-        <activity android:name="org.commcare.activities.ConnectIdLoginActivity"/>
-        <activity android:name="org.commcare.activities.ConnectIdRegistrationActivity"/>
-        <activity android:name="org.commcare.activities.ConnectIdVerificationActivity"/>
+        <activity android:name="org.commcare.activities.ConnectIDLoginActivity"/>
+        <activity android:name="org.commcare.activities.ConnectIDRegistrationActivity"/>
+        <activity android:name="org.commcare.activities.ConnectIDVerificationActivity"/>
+        <activity android:name="org.commcare.activities.ConnectIDPicturesActivity"/>
+        <activity android:name="org.commcare.activities.ConnectIDPhoneVerificationActivity"/>
 
         <provider
             android:name="org.commcare.provider.FormsProvider"
