--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -143,6 +143,8 @@
         <activity android:name="org.commcare.activities.StandardHomeActivity"/>
         <activity android:name="org.commcare.activities.RootMenuHomeActivity"/>
         <activity android:name="org.commcare.activities.MenuActivity"/>
+
+        <activity android:name="org.commcare.activities.ConnectIDRecoveryDecisionActivity"/>
         <activity android:name="org.commcare.activities.ConnectIDLoginActivity"/>
         <activity android:name="org.commcare.activities.ConnectIDRegistrationActivity"/>
         <activity android:name="org.commcare.activities.ConnectIDVerificationActivity"/>
