Add CommCare FCM service

--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -107,6 +107,11 @@
         android:usesCleartextTraffic="true"
         android:theme="@style/AppBaseTheme">
 
+        <!--TODO: We might want to find a better option to reference the notification channel Id-->
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_channel_id"
+            android:value="notification-channel-server-communications" />
+
         <activity
             android:label="@string/application_name"
             android:exported="true"
@@ -547,6 +552,14 @@
             android:exported="true"
             android:name="com.dimagi.android.zebraprinttool.PrintReceiverActivity"
             tools:node="merge"/>
+
+        <service
+            android:name="org.commcare.services.CommCareFirebaseMessagingService"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
 
     </application>
 
