--- a/app/jacoco.gradle
+++ b/app/jacoco.gradle
@@ -13,8 +13,8 @@ android {
 
 task jacocoTestReport(type: JacocoReport, dependsOn: ['testCommcareDebugUnitTest']) {
     reports {
-        xml.enabled = true
-        html.enabled = true
+        xml.required = true
+        html.required = true
     }
     def fileFilter = ['**/R.class',
                       '**/R$*.class',
