Added AppSelectActivity initial implementation (not using yet). Changed code to update primary phone ad main reg. info when user returns to those screens after initial creation. Improvements to recovering workflow after crash or backup to start.

--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -156,6 +156,8 @@
         <activity android:name="org.commcare.activities.connect.ConnectIDPhoneVerificationActivity"/>
         <activity android:name="org.commcare.activities.connect.ConnectIDMessageActivity"/>
 
+        <activity android:name="org.commcare.activities.AppSelectActivity"/>
+
         <provider
             android:name="org.commcare.provider.FormsProvider"
             android:exported="false"
