--- a/app/build.gradle
+++ b/app/build.gradle
@@ -132,6 +132,8 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'com.google.guava:guava:31.1-jre'
+
+    implementation 'com.appmattus.certificatetransparency:certificatetransparency-android:2.5.4'
 }
 
 ext {
