--- a/app/proguard.cfg
+++ b/app/proguard.cfg
@@ -93,6 +93,13 @@
 -keep class javax.xml.bind.annotation.** { *; }
 -dontwarn javax.xml.bind.annotation.**
 
+#OkHttp3
+-keepattributes Signature
+-keepattributes *Annotation*
+-keep class okhttp3.** { *; }
+-keep interface okhttp3.** { *; }
+-dontwarn okhttp3.**
+-dontnote okhttp3.**
 
 #Retrofit Stuff
 -dontnote retrofit2.Platform
