Adds collectors to proguard

--- a/app/proguard.cfg
+++ b/app/proguard.cfg
@@ -226,3 +226,6 @@
 -keep class com.google.common.base.Preconditions { *; }
 
 # Guava Config End
+
+#Java 8
+-keep class java.util.stream.Collectors
