--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -159,6 +159,7 @@
         <activity android:name="org.commcare.activities.connect.ConnectIdPicturesActivity"/>
         <activity android:name="org.commcare.activities.connect.ConnectIdPhoneVerificationActivity"/>
         <activity android:name="org.commcare.activities.connect.ConnectIdMessageActivity"/>
+        <activity android:name="org.commcare.activities.connect.ConnectActivity"/>
 
         <activity android:name="org.commcare.activities.AppSelectActivity"/>
 
