--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.crashlytics'
+apply plugin: 'androidx.navigation.safeargs'
 apply from: 'jacoco.gradle'
 
 repositories {
@@ -122,7 +123,7 @@ dependencies {
     implementation "androidx.work:work-runtime:2.7.1"
     implementation "androidx.work:work-runtime-ktx:2.7.1"
 
-    implementation 'com.google.android.play:core:1.10.3'
+    implementation 'com.google.android.play:app-update:2.1.0'
     implementation 'android.arch.lifecycle:common-java8:1.1.1'
 
     //Robust TLS 1.2 ciphers on Android 9-19
@@ -138,6 +139,12 @@ dependencies {
 
     implementation 'io.michaelrocks:libphonenumber-android:8.13.11'
     implementation 'com.nulab-inc:zxcvbn:1.7.0'
+
+    def nav_version = "2.6.0"
+    implementation "androidx.navigation:navigation-fragment:$nav_version"
+    implementation "androidx.navigation:navigation-ui:$nav_version"
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
+    implementation "androidx.navigation:navigation-compose:$nav_version"
 }
 
 ext {
@@ -231,7 +238,7 @@ static def getDate() {
 }
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 33
 
     lintOptions {
         abortOnError false
