--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -34,6 +34,8 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.NEARBY_WIFI_DEVICES"
+        android:usesPermissionFlags="neverForLocation"/>
 
     <uses-feature
         android:name="android.hardware.telephony"
