--- a/commcare-support-library/build.gradle
+++ b/commcare-support-library/build.gradle
@@ -39,10 +39,10 @@ afterEvaluate {
 }
 
 android {
-    compileSdkVersion 30
+    compileSdk 33
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 33
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
     buildTypes {
