Added cccStaging build flavor to support Connect production and staging versions.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -275,6 +275,9 @@ android {
         buildConfigField "String", "HQ_API_USERNAME", "\"${project.ext.HQ_API_USERNAME}\""
         buildConfigField "String", "HQ_API_PASSWORD", "\"${project.ext.HQ_API_PASSWORD}\""
         buildConfigField "String", "FIREBASE_DATABASE_URL", "\"${project.ext.FIREBASE_DATABASE_URL}\""
+
+        buildConfigField "String", "CCC_HOST", "\"connect.dimagi.com\""
+
         testInstrumentationRunner "org.commcare.CommCareJUnitRunner"
     }
 
@@ -333,6 +336,10 @@ android {
             manifest.srcFile 'CommcareAndroidManifest.xml'
         }
 
+        cccStaging {
+            manifest.srcFile 'CommcareAndroidManifest.xml'
+        }
+
         standalone {
             res.srcDirs = ['standalone/res']
             assets.srcDirs = ['standalone/assets']
@@ -380,6 +387,15 @@ android {
 
             // set the app name
             def applicationName = "CommCare LTS"
+            resValue "string", "application_name", applicationName
+        }
+
+
+        cccStaging {
+            buildConfigField "String", "CCC_HOST", "\"connect-staging.dimagi.com\""
+
+            // set the app name
+            def applicationName = "CommCare (CCC Staging)"
             resValue "string", "application_name", applicationName
         }
 
