--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -139,6 +139,10 @@
             android:name="com.google.firebase.messaging.default_notification_channel_id"
             android:value="@string/fcm_default_notification_channel" />
 
+        <meta-data
+            android:name="com.google.mlkit.vision.DEPENDENCIES"
+            android:value="face" />
+
         <activity
             android:label="@string/application_name"
             android:exported="true"
