--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,7 @@ dependencies {
     implementation "androidx.camera:camera-core:$cameraX_version"
     implementation "androidx.camera:camera-camera2:$cameraX_version"
     implementation "androidx.camera:camera-lifecycle:$cameraX_version"
+    implementation 'com.google.android.gms:play-services-mlkit-face-detection:17.1.0'
     implementation(name: 'htmlspanner-custom', ext: 'aar')
     implementation 'com.github.dimagi:zebra-print-android:v1.3'
     implementation (name: 'LibSimprints-1.0.12', ext: 'aar')
